objects/AsiaMaintenanceContractManagement__c.object
<CustomObject>
    <fields>
        <fullName>AccountBookRemainingAmount__c</fullName>
        <formula>AccountBookTotalBillingAmount__c - AccountBookTotalPaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountBookTotalAmount__c</fullName>
        <formula>AccountBookTotalBillingAmount__c + AccountBookTotalPaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Book Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountBookTotalBillingAmount__c</fullName>
        <label>Account Book Total Billing Amount</label>
        <summarizedField>AsiaMaintenanceAccountBook__c.BillingAmount__c</summarizedField>
        <summaryForeignKey>AsiaMaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AccountBookTotalPaymentAmount__c</fullName>
        <label>Account Book Total Payment Amount</label>
        <summarizedField>AsiaMaintenanceAccountBook__c.PaymentAmount__c</summarizedField>
        <summaryForeignKey>AsiaMaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>JEOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL ASIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractPrice__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractSentDate__c</fullName>
        <label>SA Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStopDate__c</fullName>
        <label>Contract Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyContractPrice__c</fullName>
        <label>Currency Contract Price</label>
        <picklist>
            <picklistValues>
                <fullName>SGD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPONumber__c</fullName>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuchuKakudoValue__c</fullName>
        <formula>IF ( ISBLANK(NewOdrSalesPipeline__c), NULL, NewOdrSalesPipeline__r.JuchuKakudoValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accuracy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOdrAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMDM_Assistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrFlagshipProduct__c</fullName>
        <label>Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrMaintenancePeriodText__c</fullName>
        <formula>TRIM(SUBSTITUTE(TEXT(NewContractStartDate__c), &apos;-&apos;, &apos;/&apos;) &amp; &apos; - &apos; &amp; SUBSTITUTE(TEXT(NewContractEndDate__c), &apos;-&apos;, &apos;/&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrProfitCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>Maintenance Contract Management</relationshipLabel>
        <relationshipName>Maintenance_Contract_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.SalesAccountFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.SalesAccountSituation__c</field>
                <operation>notEqual</operation>
                <value>無効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenance Contract Management (SalesAccount)</relationshipLabel>
        <relationshipName>ASalesOdr_Pipeline_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactEmail__c</fullName>
        <label>E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactFax__c</fullName>
        <label>Contact FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactPosition__c</fullName>
        <label>Sales Contact Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactPost__c</fullName>
        <label>Sales Contact Post</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesContactTel__c</fullName>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesPipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales PL</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>Maintenance Contract Management</relationshipLabel>
        <relationshipName>AMCM_SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMDM_SalesStaff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrSalesTantoshya__c</fullName>
        <label>Sales Account Responsible Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrSeries__c</fullName>
        <label>Series</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ShipmentAccountFlag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.ShipmentAccountSituation__c</field>
                <operation>notEqual</operation>
                <value>無効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenance Contract Management (ShipmentAccount)</relationshipLabel>
        <relationshipName>ASalesOdr_Pipeline_Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContactPosition__c</fullName>
        <label>Shipment Contact Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContactPost__c</fullName>
        <label>Shipment Contact Post</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContact_Email__c</fullName>
        <label>E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContact_Fax__c</fullName>
        <label>Contact FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentContact_Tel__c</fullName>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOdrShipmentTantosha__c</fullName>
        <label>Shipment Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextYearNotes__c</fullName>
        <label>Next Year Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentAmountSum__c</fullName>
        <label>Payment Amount(Sum)</label>
        <summarizedField>AsiaMaintenanceAccountBook__c.PaymentAmount__c</summarizedField>
        <summaryForeignKey>AsiaMaintenanceAccountBook__c.MaintenanceContractManagement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <formula>IF( OR(PaymentAmountSum__c = 0,ISNULL(PaymentAmountSum__c) )  , 
   &quot;-&quot;, 
    IF( OR(ContractPrice__c = 0,ISNULL(ContractPrice__c)) ,
         &quot;-&quot;,
         IF( CONTAINS(TEXT( ROUND((PaymentAmountSum__c/ContractPrice__c)*100,1) ), &quot;.&quot;),
             TEXT( ROUND((PaymentAmountSum__c/ContractPrice__c)*100,1) )&amp; &quot;%&quot;,
             TEXT( ROUND((PaymentAmountSum__c/ContractPrice__c)*100,1) )&amp; &quot;.0%&quot;)
          
      ) 
)</formula>
        <label>Percentage(Payment Amount/Contract Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousYearPipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Year Pipeline</label>
        <referenceTo>AsiaMaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>Maintenance Contract Management</relationshipLabel>
        <relationshipName>PreviousYearPipeline_lkup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Master No.</label>
        <referenceTo>AsiaProjectMaster__c</referenceTo>
        <relationshipLabel>Maintenance Contract Management</relationshipLabel>
        <relationshipName>MaintenanceContractManagement_ProjMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuotationCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QT Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuotationSentDate__c</fullName>
        <label>QT Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SACreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusMemo__c</fullName>
        <label>Status Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalAlways1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Technical used for displaying automatically some filters in reports.
This field should always contain the value 1</description>
        <label>Technical Always1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SVC-01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SVC-02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVC-03</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Maintenance Contract Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NewContractStartDate__c</columns>
        <columns>NewContractEndDate__c</columns>
        <columns>NewOdrSeries__c</columns>
        <columns>PreviousYearPipeline__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Maintenance_contract</fullName>
        <columns>NAME</columns>
        <columns>ProjectMaster__c</columns>
        <columns>NewOdrFlagshipProduct__c</columns>
        <columns>Status__c</columns>
        <columns>NewOdrSeries__c</columns>
        <columns>NewContractStartDate__c</columns>
        <columns>NewContractEndDate__c</columns>
        <columns>CurrencyContractPrice__c</columns>
        <columns>NewOdrProfitCalculation__c</columns>
        <columns>NextYearNotes__c</columns>
        <columns>NewOdrAssistant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Maintenance contract</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLM-{00000000}</displayFormat>
        <label>Maintenance Contract Management No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>